<resources>
    <!--
        using dynamic naming with respect to build type.
    -->
    <string name="app_name">Sadapay.exercise</string>
    <string name="app_name_debug">debug.exercise</string>
    <string name="app_name_qa">qa.exercise</string>
    <string name="user_avatar">User Avatar</string>
    <string name="text_view_user_name_placeholder">AafaaqAli</string>
    <string name="text_view_repository_name_placeholder">PopularRepos</string>
    <string name="text_view_repository_description">This project aims display popular repositories which have most starts, and most active contributors from OpenSource Community.</string>
    <string name="language_place_holder">Python</string>
    <string name="starts_place_holder">115</string>
    <string name="retry">RETRY</string>
    <string name="something_went_wrong">Something went wrong..</string>
    <string name="an_alien_is_probably_blocking_your_signal">An alien is probably blocking your signal.</string>
    <string name="page_title_trending">Trending</string>
    <string name="content_description_switch_ui_mode">Switch UI Mode</string>
    <string name="switch_ui_mode">Switch UI mode</string>
    <string name="no_connectivity">No connectivity</string>
    <string name="connection_available">Connection available</string>

    <!--spaces-->
    <string name="string_place_holder">&#160;&#160;&#160;&#160;&#160;&#160;</string>
</resources>