<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".features.trending_repositories.presentation.fragments.network_error_fragment.NetworkErrorFragment">

    <data>

        <variable
            name="viewModel"
            type="com.sadapay.takehomeexercise.features.trending_repositories.presentation.fragments.network_error_fragment.NetworkErrorViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/image_no_network"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/layout_text_view"
            android:layout_marginBottom="@dimen/_8sdp"
            android:paddingStart="@dimen/_15sdp"
            android:paddingTop="@dimen/_15sdp"
            android:paddingEnd="@dimen/_15sdp"
            android:paddingBottom="@dimen/_4sdp"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/lottie_network_error" />

        <LinearLayout
            android:id="@+id/layout_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/button_retry"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/_55sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_4sdp"
                android:fontFamily="@font/vega_sb_medium"
                android:text="@string/something_went_wrong"
                android:textAlignment="center"
                android:textColor="@color/color_warm_grey"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/vega_sb_medium"
                android:text="@string/an_alien_is_probably_blocking_your_signal"
                android:textAlignment="center"
                android:textColor="@color/color_light_grey"
                android:textSize="@dimen/_12ssp" />

        </LinearLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_retry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="@dimen/_45sdp"
            android:layout_marginEnd="@dimen/_45sdp"
            android:layout_marginBottom="@dimen/_55sdp"
            android:background="@drawable/ripple_retry_background"
            android:clickable="true"
            android:elevation="@dimen/_10sdp"
            android:focusable="true"
            android:onClick="@{()->viewModel.onRetryClicked()}"
            android:text="@string/retry"
            android:textColor="@color/color_green" />
    </RelativeLayout>
</layout>